[package]
name = "csv_utility"
version = "0.1.0"
authors = ["Matthias Lodner <matthias.lodner@uni-ulm.de>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/Matzenxt/csv_utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI framework
seahorse = "1.1.1"

# CSV
csv = "1.1.4"

# Necessary for dialoguer and indicatif
console = "0.13.0"

# Option picker / 'interface'
dialoguer = "0.7.1"

# Loading bars
indicatif = "0.15.0"
