[package]
name = "csv_utility"
version = "0.1.0"
authors = ["Matthias Lodner <matthias.lodner@uni-ulm.de>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/Matzenxt/csv_utility"
keywords = ["csv_utility", "csv", "utility", "cli", "map"]
description = "CLI to map csv files and some other utilities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI framework
seahorse = "1.1.1"

# CSV
csv = "1.1.5"

# Option picker / user interface
dialoguer = "0.7.1"

# To de- / serilise mappings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
